<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Activities.GetLivreActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/livreinfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.android.volley.toolbox.NetworkImageView
            android:id="@+id/getmagazineImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvTitre_Details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/getlivreImage"
            android:layout_toEndOf="@id/getlivreImage"
            android:text="[TITRE]"
            android:textSize="@dimen/detailTitle"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearBtn_Details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="bottom"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/livreinfo">

        <Button
            android:id="@+id/btnReturn_Details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/returnbtn"/>

        <Button
            android:id="@+id/btnDel_Details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deletebtn"/>

        <Button
            android:id="@+id/btnMainMenu_Details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mainmenu" />
    </LinearLayout>
</RelativeLayout>