<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Activities.GetEditeurActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/livreinfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <TextView
            android:id="@+id/nomclasse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/typeTitle"
            android:text="[TYPE]"/>

        <TextView
            android:id="@+id/nom"
            android:layout_below="@id/nomclasse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:text="[NOM]"
            android:textSize="@dimen/detailTitle"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/nom"
            android:id="@+id/adressefield"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/adressetitre"
                android:text="@string/addresstitle"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/num"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="[NUMERO]"
                    android:paddingRight="10dp"
                    android:paddingEnd="10dp"/>
                <TextView
                    android:id="@+id/rue"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="[RUE]"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/codepostal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="[CODEPOSTAL]"
                    android:paddingRight="10dp"
                    android:paddingEnd="10dp"/>
                <TextView
                    android:id="@+id/ville"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="[VILLE]"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/publications"/>
        </LinearLayout>

        <ListView
            android:id="@+id/lvlivres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/adressefield">
        </ListView>

        <RelativeLayout
            android:id="@+id/linearBtn_Details"
            android:layout_below="@id/lvlivres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="bottom"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <Button
                android:id="@+id/btnReturn_Details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/returnbtn"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>


            <Button
                android:id="@+id/btnMainMenu_Details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mainmenu"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>